--- a/procfile
+++ b/procfile
@@ -1,3 +1,3 @@
-web: gunicorn -b 0.0.0.0:5000 app_server:app
-worker: python external_server.py
+web: gunicorn -b 0.0.0.0:5000 external_server:app
+worker: python api_server.py
 worker: python app.py
